--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -74,7 +74,14 @@ react {
 /**
  * Set this to true to Run Proguard on Release builds to minify the Java bytecode.
  */
-def enableProguardInReleaseBuilds = false
+def enableProguardInReleaseBuilds = true
+
+
+/**
+ * Set this to true to enable desugaring if minSdkVersion is set to 34 or below.
+ * Note that this currently affects Detox testing with release builds and therefore is not enabled by default.
+ */
+def enableDesugaring = false
 
 /**
  * The preferred build flavor of JavaScriptCore (JSC)
@@ -121,12 +128,11 @@ android {
             // see https://reactnative.dev/docs/signed-apk-android.
             signingConfig signingConfigs.debug
             minifyEnabled enableProguardInReleaseBuilds
-            proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
-            proguardFile "${rootProject.projectDir}/../node_modules/detox/android/detox/proguard-rules-app.pro"
+            proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro", "${rootProject.projectDir}/../node_modules/detox/android/detox/proguard-rules-app.pro"
         }
     }
     compileOptions {
-        coreLibraryDesugaringEnabled true
+        coreLibraryDesugaringEnabled enableDesugaring
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
     }
@@ -152,7 +158,7 @@ dependencies {
     implementation 'com.google.android.libraries.navigation:navigation:6.0.0'
 
     // Desugar Java 8+ APIs
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs_nio:2.0.4'
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.3'
 }
 
 secrets {
