--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -78,10 +78,10 @@ def enableProguardInReleaseBuilds = true
 
 
 /**
- * Set this to true to enable desugaring if minSdkVersion is set to 34 or below.
- * Note that this currently affects Detox testing with release builds and therefore is not enabled by default.
+ * Desugaring is required to be set on from navigation-sdk version 6.3.0 onwards.
+ * Note that this enableDesugaring currently affects Detox testing with release builds.
  */
-def enableDesugaring = false
+def enableDesugaring = true
 
 /**
  * The preferred build flavor of JavaScriptCore (JSC)
@@ -155,7 +155,7 @@ dependencies {
     implementation "androidx.car.app:app-projected:1.4.0"
 
     // Include the Google Navigation SDK.
-    implementation 'com.google.android.libraries.navigation:navigation:6.1.0'
+    implementation 'com.google.android.libraries.navigation:navigation:6.3.1'
 
     // Desugar Java 8+ APIs
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.3'
