--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -42,8 +42,18 @@ allprojects {
         maven {
             url("$rootDir/../node_modules/detox/Detox-android")
         }
-   }
+    }
 
+    // Required: you must exclude the Google Play service Maps SDK from
+    // your transitive dependencies to make sure there won't be
+    // multiple copies of Google Maps SDK in your binary, as the Navigation
+    // SDK already bundles the Google Maps SDK.
+    configurations {
+        implementation {
+            exclude group: 'com.google.android.gms', module: 'play-services-maps'
+        }
+    }
+    
     subprojects {
         afterEvaluate { project ->
             if (project.hasProperty('android')) {
