--- a/example/package.json
+++ b/example/package.json
@@ -26,7 +26,7 @@
     "@react-navigation/stack": "^6.4.1",
     "react": "18.3.1",
     "react-native": "0.76.2",
-    "react-native-gesture-handler": "^2.21.0",
+    "react-native-gesture-handler": "2.25.0",
     "react-native-permissions": "^5.1.0",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^3.35.0",
