--- a/package.json
+++ b/package.json
@@ -59,25 +59,27 @@
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^19.2.2",
+    "@eslint/compat": "^1.2.7",
+    "@eslint/eslintrc": "^3.3.0",
+    "@eslint/js": "^9.22.0",
     "@evilmartians/lefthook": "^1.5.0",
-    "@react-native/eslint-config": "^0.74.83",
-    "@react-native/typescript-config": "0.81.1",
-    "@testing-library/react-native": "^12.5.0",
-    "@types/react": "18.2.6",
+    "@react-native/babel-preset": "^0.81.1",
+    "@react-native/eslint-config": "^0.78.0",
+    "@react-native/typescript-config": "^0.81.1",
+    "@testing-library/react-native": "^13.3.3",
+    "@types/react": "19.1.0",
     "commitlint": "^19.3.0",
     "del-cli": "^5.1.0",
-    "eslint": "^8.51.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-testing-library": "^6.2.2",
+    "eslint": "^9.22.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.3",
     "prettier": "^3.3.3",
-    "react": "18.2.0",
-    "react-native": "0.74.1",
-    "react-native-builder-bob": "^0.29.0",
-    "react-test-renderer": "18.2.0",
+    "react": "19.1.0",
+    "react-native": "0.81.1",
+    "react-native-builder-bob": "^0.40.13",
+    "react-test-renderer": "^19.1.0",
     "turbo": "^1.10.7",
-    "typescript": ">=4.3.5 <5.9.0"
+    "typescript": "^5.8.3"
   },
   "peerDependencies": {
     "react": "*",
@@ -92,34 +94,6 @@
       "@commitlint/config-conventional"
     ]
   },
-  "eslintConfig": {
-    "root": true,
-    "extends": [
-      "@react-native",
-      "google",
-      "prettier"
-    ],
-    "rules": {
-      "no-unused-vars": "off",
-      "@typescript-eslint/no-unused-vars": 2,
-      "prettier/prettier": [
-        "error",
-        {
-          "arrowParens": "avoid",
-          "quoteProps": "consistent",
-          "singleQuote": true,
-          "tabWidth": 2,
-          "trailingComma": "es5",
-          "useTabs": false
-        }
-      ]
-    }
-  },
-  "eslintIgnore": [
-    "node_modules/",
-    "coverage/",
-    "lib/"
-  ],
   "prettier": {
     "arrowParens": "avoid",
     "quoteProps": "consistent",
