--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -173,7 +173,8 @@ jobs:
           yarn turbo run build:android --cache-dir="${{ env.TURBO_CACHE_DIR }}"
 
   build-ios:
-    runs-on: macos-14
+    runs-on:
+      labels: macos-latest-xlarge
     timeout-minutes: 45
     env:
       TURBO_CACHE_DIR: .turbo/ios
