--- a/example/package.json
+++ b/example/package.json
@@ -27,6 +27,7 @@
     "react": "19.1.0",
     "react-native": "0.81.1",
     "react-native-gesture-handler": "2.25.0",
+    "react-native-pager-view": "^6.9.1",
     "react-native-permissions": "^5.1.0",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "4.15.4",
