--- a/package.json
+++ b/package.json
@@ -78,12 +78,14 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-native": "^5.0.0",
+    "eslint-plugin-tsdoc": "^0.4.0",
     "prettier": "^3.6.2",
     "react": "19.1.0",
     "react-native": "0.81.1",
     "react-native-builder-bob": "^0.40.13",
     "react-test-renderer": "19.1.0",
     "turbo": "^1.10.7",
+    "typedoc": "^0.28.13",
     "typescript": "^5.8.3"
   },
   "peerDependencies": {
